[package]
name = "ebqn_heap"
version = "0.1.0"
authors = ["Rowan Cannaday <cannadayr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ebqn_heap"
crate-type = ["dylib"]

[dependencies]
rustler = "0.21.1"
lazy_static = "1.2.0"
xid = "1.0.0"
